--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             border-radius: 50%;
         }
 
+        .logo img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+        }
+
         .categories {
             margin-top: 30px;
         }
@@ -87,7 +93,9 @@
     <div class="main-content">
         <!-- Name and Logo -->
         <div>
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="path/to/your/logo.png" alt="Tolga Ulkumen's Logo">
+            </div>
             <h1>Tolga Ulkumen</h1>
         </div>
 
