--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- Name and Logo -->
         <div>
             <div class="logo">
-                <img src="path/to/your/logo.png" alt="Tolga Ulkumen's Logo">
+                <img src="profile.png" alt="Logo" class="logo-circle">
             </div>
             <h1>Tolga Ulkumen</h1>
         </div>
