--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             margin: 20px auto;
             width: 100px;
             height: 100px;
-            background-color: black; /* Placeholder for logo */
+            background-color: transparent; /* Placeholder for logo */
             border-radius: 50%;
         }
 
