--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
             border-radius: 50%;
         }
 
+        h1 {
+            font-family: 'Arial', sans-serif; /* Replace 'Arial' with your desired font */
+            font-size: 36px; /* Adjust the size as needed */
+            font-weight: bold; /* Makes the font bold */
+            text-transform: uppercase; /* Converts text to uppercase */
+            margin-top: 20px; /* Adds some space above */
+            color: black; /* Ensures text is visible on a white background */
+            text-align: center; /* Centers the text */
+        }
+        
         .categories {
             margin-top: 30px;
         }
