--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Tolga Ulkumen</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@506&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -60,13 +63,13 @@
         }
 
         h1 {
-            font-family: 'Arial', sans-serif; /* Replace 'Arial' with your desired font */
-            font-size: 36px; /* Adjust the size as needed */
-            font-weight: bold; /* Makes the font bold */
-            text-transform: uppercase; /* Converts text to uppercase */
-            margin-top: 20px; /* Adds some space above */
-            color: black; /* Ensures text is visible on a white background */
-            text-align: center; /* Centers the text */
+            font-family: 'Lexend', sans-serif; /* Use the Lexend font */
+            font-size: 36px;
+            font-weight: 506; /* Matches Google Fonts weight */
+            text-transform: uppercase; /* Makes text all uppercase */
+            margin-top: 20px; /* Adjust spacing */
+            color: black; /* Ensure text is visible */
+            text-align: center; /* Center-align the text */
         }
         
         .categories {
